[gd_scene load_steps=3 format=3 uid="uid://zone_editor_dock"]

[ext_resource type="Script" path="res://addons/zone_editor/zone_editor_dock.gd" id="1_editor"]
[ext_resource type="Script" path="res://addons/zone_editor/zone_canvas.gd" id="2_canvas"]

[node name="ZoneEditorDock" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_editor")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0

[node name="Toolbar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="StageSelect" type="OptionButton" parent="VBox/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(100, 0)

[node name="ZoneSelect" type="OptionButton" parent="VBox/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(100, 0)

[node name="SaveBtn" type="Button" parent="VBox/Toolbar"]
layout_mode = 2
text = "Save"

[node name="LoadBtn" type="Button" parent="VBox/Toolbar"]
layout_mode = 2
text = "Load"

[node name="ClearBtn" type="Button" parent="VBox/Toolbar"]
layout_mode = 2
text = "Clear"

[node name="ZoneCanvas" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
script = ExtResource("2_canvas")

[node name="StatusLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Select a stage and start drawing zones!"

